<?xml version="1.0"?>
<package format="2">
  <name>seher_support</name>
  <version>0.1.0</version>
  <description>The seher_support package</description>

  <maintainer email="aulon@todo.todo">aulon</maintainer>
  <license>Apache 2.0</license>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
